More changes for the game

--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
    <meta charset="UTF-8">
    <title>Online Cribbage</title>
-   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+   <script src="https://unpkg.com/vue/dist/vue.js"></script>
+   <!--<script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>-->
+
    <script defer src="./js/main.js"></script>
 
 </head>
 <body>
    <div id="main">
       <h1> {{ title }} </h1>
+      <hr>
 
       <!--Player name: <input v-model="playerName"> <br>-->
       Player Name: <input v-model="playerName">
