--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
    <meta charset="UTF-8">
    <title>Online Cribbage</title>
    <script src="https://unpkg.com/vue/dist/vue.js"></script>
+   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
    <!--<script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>-->
 
    <script defer src="./js/main.js"></script>
@@ -28,9 +29,6 @@
 
       <button v-on:click="startGame">Start Game</button>
 
-      <div id="start">
-         <span v-if=ready>{{ playerName }} is joining {{ team }} </span>
-      </div>
    </div>
 
 </body>
