Adding server IP

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <!--Player name: <input v-model="playerName"> <br>-->
       Player Name: <input v-model="playerName">
       <br>
+      Server ip: <input v-model="serverIP">
       <br>
       Select team: <br>
       <input type="radio" id="team1" value="team1" v-model="team">
