Adding select_crib

--- a/game.html
+++ b/game.html
@@ -72,7 +72,7 @@
          <table id="myCardsTable" class="myCards" >
             <tr>
                <td class="card" v-for="card in myCards">
-                  <button v-on:click="playCard"> {{ card }} </button>
+                  <button v-on:click="selectCard"> {{ card }} </button>
                </td>
             </tr>
          </table>
