--- a/game.html
+++ b/game.html
@@ -101,21 +101,21 @@
          <table id="myCardsTable" class="myCards" >
             <tr>
                <td class="card" v-for="card in myCards">
-                  <button v-on:click="selectCard"> {{ card }} </button>
+                  <button class="card-button" v-on:click="selectCard"> {{ card }} </button>
                </td>
                <td class="card">
                   <div>
-                     <button v-on:click="selectCard"> Pass </button>
+                     <button class="card-button" v-on:click="selectCard"> Pass </button>
                   </div>
                </td>
                <td class="card" v-if="nextRoundAvail && myTurn">
                   <div>
-                     <button v-on:click="selectCard"> Next Round </button>
+                     <button class="card-button" v-on:click="selectCard"> Next Round </button>
                   </div>
                </td>
                <td class="card" v-if="allDone">
                   <div>
-                     <button v-on:click="newHand"> Next Hand </button>
+                     <button class="card-button" v-on:click="newHand"> Next Hand </button>
                   </div>
                </td>
             </tr>
