Cleaning up from previous commit

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
          <form class="form-signin">
             <h2 class="form-signin-heading">{{ title }}</h2>
 
-            <label for="inputName" class="sr-only">Email address</label>
+            <label for="inputName" class="sr-only">Name</label>
             <input type="name" id="inputName" class="form-control" placeholder="Name" required autofocus>
 
             <label for="inputServerIp" class="sr-only">Password</label>
