Fixes to next player

--- a/game.html
+++ b/game.html
@@ -22,10 +22,10 @@
 
    </head>
    <body>
-      <div id="game">
+      <div id="game" class="gamepage">
          <h1> Cribbage - {{ playerName }} - {{ team }} </h1>
          <hr>
-         <div id=scoreboard">
+         <div id=scoreboard" class="scoreboard">
             <table>
                <tr>
                   <td>
